// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accepts array series override (Area Chart) 1`] = `
Object {
  "color": "#ffffff",
  "line_width": 3,
  "shape": "circle",
  "style": "outline",
  "value_format": "0",
  "visible": true,
}
`;

exports[`Accepts array series override (Bar Chart) 1`] = `
Object {
  "color": "#ffffff",
  "value_format": "0",
  "visible": true,
}
`;

exports[`Accepts array series override (Column Chart) 1`] = `
Object {
  "color": "#ffffff",
  "value_format": "0",
  "visible": true,
}
`;

exports[`Accepts array series override (Line Chart) 1`] = `
Object {
  "color": "#ffffff",
  "line_width": 3,
  "shape": "circle",
  "style": "outline",
  "value_format": "0",
  "visible": true,
}
`;

exports[`Accepts array series override (Scatterplot Chart) 1`] = `
Object {
  "color": "#ffffff",
  "line_width": 3,
  "shape": "circle",
  "size_by": false,
  "style": "outline",
  "value_format": "0",
  "visible": true,
}
`;

exports[`Accepts array series override (Sparkline Chart) 1`] = `
Object {
  "color": "#ffffff",
  "line_width": 3,
}
`;

exports[`Accepts named series override (Area Chart) 1`] = `
Object {
  "color": "#000000",
  "label": "TEST LABEL!",
  "line_width": 3,
  "shape": "diamond",
  "style": "outline",
  "value_format": "0",
  "visible": false,
}
`;

exports[`Accepts named series override (Bar Chart) 1`] = `
Object {
  "color": "#000000",
  "label": "TEST LABEL!",
  "value_format": "0",
  "visible": false,
}
`;

exports[`Accepts named series override (Column Chart) 1`] = `
Object {
  "color": "#000000",
  "label": "TEST LABEL!",
  "value_format": "0",
  "visible": false,
}
`;

exports[`Accepts named series override (Line Chart) 1`] = `
Object {
  "color": "#000000",
  "label": "TEST LABEL!",
  "line_width": 3,
  "shape": "diamond",
  "style": "outline",
  "value_format": "0",
  "visible": false,
}
`;

exports[`Accepts named series override (Scatterplot Chart) 1`] = `
Object {
  "color": "#000000",
  "label": "TEST LABEL!",
  "line_width": 3,
  "shape": "diamond",
  "size_by": false,
  "style": "outline",
  "value_format": "0",
  "visible": false,
}
`;

exports[`Accepts named series override (Sparkline Chart) 1`] = `
Object {
  "color": "#000000",
  "label": "TEST LABEL!",
  "line_width": 3,
  "visible": false,
}
`;

exports[`Accepts y-axis override (Area Chart) 1`] = `
Array [
  Object {
    "gridlines": true,
    "label": "Axis name (1)",
    "range": Array [
      -200,
      10000,
    ],
    "values": true,
  },
]
`;

exports[`Accepts y-axis override (Bar Chart) 1`] = `
Array [
  Object {
    "gridlines": true,
    "label": "Axis name (1)",
    "range": Array [
      -200,
      10000,
    ],
    "values": true,
  },
]
`;

exports[`Accepts y-axis override (Column Chart) 1`] = `
Array [
  Object {
    "gridlines": true,
    "label": "Axis name (1)",
    "range": Array [
      -200,
      10000,
    ],
    "values": true,
  },
]
`;

exports[`Accepts y-axis override (Line Chart) 1`] = `
Array [
  Object {
    "gridlines": true,
    "label": "Axis name (1)",
    "range": Array [
      -200,
      10000,
    ],
    "values": true,
  },
]
`;

exports[`Accepts y-axis override (Scatterplot Chart) 1`] = `
Array [
  Object {
    "gridlines": true,
    "label": "Axis name (1)",
    "range": Array [
      -200,
      10000,
    ],
    "values": true,
  },
]
`;

exports[`Accepts y-axis override (Sparkline Chart) 1`] = `
Array [
  Object {
    "range": Array [
      -200,
      10000,
    ],
  },
]
`;

exports[`Derives default values from SDK response (Area Chart) 1`] = `
Object {
  "legend": Object {
    "position": "bottom",
  },
  "positioning": "overlay",
  "render_null_values": false,
  "series": Object {
    "orders.average_total_amount_of_order_usd": Object {
      "color": "#70BEFA",
      "label": "Average Order Price",
      "line_width": 3,
      "shape": "circle",
      "style": "outline",
      "value_format": "0",
      "visible": false,
    },
    "orders.count": Object {
      "color": "#FA8072",
      "label": "Total Orders",
      "line_width": 3,
      "shape": "diamond",
      "style": "outline",
      "value_format": "0",
      "visible": true,
    },
  },
  "tooltips": true,
  "type": "area",
  "x_axis": Array [
    Object {
      "gridlines": false,
      "label": "Orders Created Date",
      "reversed": false,
      "values": true,
    },
  ],
  "y_axis": Array [
    Object {
      "gridlines": true,
      "label": "Axis name (1)",
      "range": Array [
        "auto",
        "auto",
      ],
      "values": true,
    },
  ],
}
`;

exports[`Derives default values from SDK response (Bar Chart) 1`] = `
Object {
  "legend": Object {
    "position": "bottom",
  },
  "positioning": "grouped",
  "series": Object {
    "orders.average_total_amount_of_order_usd": Object {
      "color": "#70BEFA",
      "label": "Average Order Price",
      "value_format": "0",
      "visible": false,
    },
    "orders.count": Object {
      "color": "#FA8072",
      "label": "Total Orders",
      "value_format": "0",
      "visible": true,
    },
  },
  "tooltips": true,
  "type": "bar",
  "x_axis": Array [
    Object {
      "gridlines": false,
      "label": "Orders Created Date",
      "reversed": false,
      "values": true,
    },
  ],
  "y_axis": Array [
    Object {
      "gridlines": true,
      "label": "Axis name (1)",
      "range": Array [
        "auto",
        "auto",
      ],
      "values": true,
    },
  ],
}
`;

exports[`Derives default values from SDK response (Column Chart) 1`] = `
Object {
  "legend": Object {
    "position": "bottom",
  },
  "positioning": "grouped",
  "series": Object {
    "orders.average_total_amount_of_order_usd": Object {
      "color": "#70BEFA",
      "label": "Average Order Price",
      "value_format": "0",
      "visible": false,
    },
    "orders.count": Object {
      "color": "#FA8072",
      "label": "Total Orders",
      "value_format": "0",
      "visible": true,
    },
  },
  "tooltips": true,
  "type": "column",
  "x_axis": Array [
    Object {
      "gridlines": false,
      "label": "Orders Created Date",
      "reversed": false,
      "values": true,
    },
  ],
  "y_axis": Array [
    Object {
      "gridlines": true,
      "label": "Axis name (1)",
      "range": Array [
        "auto",
        "auto",
      ],
      "values": true,
    },
  ],
}
`;

exports[`Derives default values from SDK response (Line Chart) 1`] = `
Object {
  "legend": Object {
    "position": "bottom",
  },
  "render_null_values": false,
  "series": Object {
    "orders.average_total_amount_of_order_usd": Object {
      "color": "#70BEFA",
      "label": "Average Order Price",
      "line_width": 3,
      "shape": "circle",
      "style": "outline",
      "value_format": "0",
      "visible": false,
    },
    "orders.count": Object {
      "color": "#FA8072",
      "label": "Total Orders",
      "line_width": 3,
      "shape": "diamond",
      "style": "outline",
      "value_format": "0",
      "visible": true,
    },
  },
  "tooltips": true,
  "type": "line",
  "x_axis": Array [
    Object {
      "gridlines": false,
      "label": "Orders Created Date",
      "reversed": false,
      "values": true,
    },
  ],
  "y_axis": Array [
    Object {
      "gridlines": true,
      "label": "Axis name (1)",
      "range": Array [
        "auto",
        "auto",
      ],
      "values": true,
    },
  ],
}
`;

exports[`Derives default values from SDK response (Pie Chart) 1`] = `
Object {
  "label_value_format": "0",
  "legend": Object {
    "position": "right",
    "type": "legend",
    "value": "label_percent",
  },
  "series": Object {
    "2019-12-22": Object {
      "color": "#b73ec3",
    },
    "California": Object {
      "color": "#ed6995",
    },
  },
  "tooltips": true,
  "type": "pie",
  "value_format": "0",
}
`;

exports[`Derives default values from SDK response (Scatterplot Chart) 1`] = `
Object {
  "legend": Object {
    "position": "bottom",
  },
  "render_null_values": false,
  "series": Object {
    "orders.average_total_amount_of_order_usd": Object {
      "color": "#70BEFA",
      "label": "Average Order Price",
      "line_width": 3,
      "shape": "circle",
      "size_by": false,
      "style": "outline",
      "value_format": "0",
      "visible": false,
    },
    "orders.count": Object {
      "color": "#FA8072",
      "label": "Total Orders",
      "line_width": 3,
      "shape": "diamond",
      "size_by": false,
      "style": "outline",
      "value_format": "0",
      "visible": true,
    },
  },
  "tooltips": true,
  "type": "scatter",
  "x_axis": Array [
    Object {
      "gridlines": false,
      "label": "Orders Created Date",
      "reversed": false,
      "values": true,
    },
  ],
  "y_axis": Array [
    Object {
      "gridlines": true,
      "label": "Axis name (1)",
      "range": Array [
        "auto",
        "auto",
      ],
      "values": true,
    },
  ],
}
`;

exports[`Derives default values from SDK response (Single Value Chart) 1`] = `
Object {
  "series": Object {
    "orders.average_total_amount_of_order_usd": Object {
      "color": "#70BEFA",
      "label": "Average Order Price",
      "value_format": "0",
    },
    "orders.count": Object {
      "color": "#FA8072",
      "label": "Total Orders",
      "value_format": "0",
    },
  },
  "type": "single_value",
}
`;

exports[`Derives default values from SDK response (Sparkline Chart) 1`] = `
Object {
  "label_value_format": "0",
  "render_null_values": false,
  "series": Object {
    "orders.average_total_amount_of_order_usd": Object {
      "color": "#70BEFA",
      "line_width": 3,
    },
    "orders.count": Object {
      "color": "#FA8072",
      "line_width": 3,
    },
  },
  "type": "sparkline",
  "value_format": "0",
  "y_axis": Array [
    Object {
      "range": Array [
        "auto",
        "auto",
      ],
    },
  ],
}
`;

exports[`Derives default values from SDK response (Table Chart) 1`] = `
Object {
  "custom_color": "#72D16D",
  "label_value_format": "0",
  "series": Object {
    "orders.average_total_amount_of_order_usd": Object {
      "cell_visualization": false,
      "label": "Average Order Price",
      "visible": false,
    },
    "orders.count": Object {
      "cell_visualization": true,
      "label": "Total Orders",
      "visible": true,
    },
  },
  "truncate_text": true,
  "type": "table",
  "value_format": "0",
}
`;

exports[`Table chart config accepts series cell visualization overrides 1`] = `
Object {
  "orders.average_total_amount_of_order_usd": Object {
    "cell_visualization": false,
    "label": "Average Order Price",
    "visible": false,
  },
  "orders.count": Object {
    "cell_visualization": false,
    "label": "Table Label",
    "visible": true,
  },
}
`;
